--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
   },
   "firestore": {
     "rules": "firestore.rules",
-    "indexes": "n"
+    "indexes": "firestore.indexes.json"
   },
   "hosting": {
     "public": "dist",
@@ -12,12 +12,6 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "storage": {
