--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-date-fns": "^2.0.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
+    "vue2-dropzone": "^3.6.0",
     "vuefire": "^2.2.5",
     "vuetify": "^2.4.0"
   },
