--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-router": "^3.2.0",
     "vue2-dropzone": "^3.6.0",
     "vuefire": "^2.2.5",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,6 +33,16 @@
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
-  "_id": "vuetify-test@0.1.0",
-  "readme": "ERROR: No README data found!"
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chang0-0/-Vue-portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chang0-0/-Vue-portfolio/issues"
+  },
+  "homepage": "https://github.com/chang0-0/-Vue-portfolio#readme",
+  "description": ""
 }
